--- a/contect.html
+++ b/contect.html
@@ -3,14 +3,20 @@
         <title>
             Contect Us
         </title>
+
+        <link rel="stylesheet" href="./contect.css">
     </head>
     <body>
         
-        <a href="home.html"><li>Home</li></a>
-        <a href="culture.html" target="_self"><li>Culture</li></a>
-        <a href="landmarks.html"><li>Landmarks</li></a>
-        <a href="cuisine.html"><li>Cuisine</li></a>
-        <a href="contect.html"><li>Contect Us</li></a>
+        <div class="link">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="culture.html" target="_self">Culture</a></li>
+                <li><a href="landmarks.html">Landmarks</a></li>
+                <li><a href="cuisine.html">Cuisine</a></li>
+                <li><a href="contect.html">Contect Us</a></li>
+            </ul>
+        </div>
 
         <h1>Contect Us</h1>
 
@@ -150,9 +156,13 @@
 
         <br>
 
-        <a href="https://ojas.gujarat.gov.in/"><li>Link</li></a>
+        <iframe src="https://ojas.gujarat.gov.in/"></iframe><br>
+        <a href="home.html">&#8592 Back to Home</a><br><br>
 
-        <a href="home.html">&#8592 Back to Home</a>
+        <div class="footer">
+            Contect us at <a href="https://www.incredibleindia.gov.in/en">info@incredibleindia.com</a><br>
+        ©2025 Incredible India Project
+        </div>
 
     </body>
 </html>
