--- a/cuisine.html
+++ b/cuisine.html
@@ -3,21 +3,27 @@
         <title>
             Cuisine
         </title>
+
+        <link rel="stylesheet" href="./cuisine.css">
     </head>
     <body>
 
-        <a href="home.html"><li>Home</li></a>
-        <a href="culture.html" target="_self"><li>Culture</li></a>
-        <a href="landmarks.html"><li>Landmarks</li></a>
-        <a href="cuisine.html"><li>Cuisine </li></a>
-        <a href="contect.html"><li>Contect Us</li></a>
+        <div class="link">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="culture.html" target="_self">Culture</a></li>
+                <li><a href="landmarks.html">Landmarks</a></li>
+                <li><a href="cuisine.html">Cuisine</a></li>
+                <li><a href="contect.html">Contect Us</a></li>
+            </ul>
+        </div>
 
 
         <h1>Popular Indian Dishes</h1>
 
         Explore the flavors of India throgth is diverse and rich culinary traditions!<br><br>
 
-        <audio src="D:\html\wd project photo\titanium.mp3" controls></audio>
+        <audio src="./../wd project photo/titanium.mp3" controls></audio>
 
 
         <h2>North Indian Cuisine</h2>
@@ -55,7 +61,12 @@
         <figure><img src="./../wd project photo/gulab_jamun.jpg"></figure>
         <blockquote>Irresistible Gulab Jamun</blockquote>
 
-        <a href="home.html">&#8592 Back to Home</a>
+        <a href="home.html">&#8592 Back to Home</a><br><br>
+
+        <div class="footer">
+            Contect us at <a href="https://www.incredibleindia.gov.in/en">info@incredibleindia.com</a><br>
+        ©2025 Incredible India Project
+        </div>
 
     </body>
 </html>
