--- a/culture.html
+++ b/culture.html
@@ -3,14 +3,20 @@
         <title>
             Culture
         </title>
+
+        <link rel="stylesheet" href="./culture.css">
     </head>
     <body>
 
-        <a href="home.html"><li>Home</li></a>
-        <a href="culture.html" target="_self"><li>Culture</li></a>
-        <a href="landmarks.html"><li>Landmarks</li></a>
-        <a href="cuisine.html"><li>Cuisine</li></a>
-        <a href="contect.html"><li>Contect Us</li></a>
+        <div class="link">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="culture.html" target="_self">Culture</a></li>
+                <li><a href="landmarks.html">Landmarks</a></li>
+                <li><a href="cuisine.html">Cuisine</a></li>
+                <li><a href="contect.html">Contect Us</a></li>
+            </ul>
+        </div>
 
         
         <h1>Indian Culchure</h1>
@@ -81,7 +87,12 @@
         <figure><img src="./../wd project photo/saree.jpg"></figure>
         <blockquote>Traditional Saree - Grace and Elegance</blockquote>
 
-        <a href="home.html">&#8592 Back to Home</a>
+        <a href="home.html">&#8592 Back to Home</a><br><br>
+
+        <div class="footer">
+            Contect us at <a href="https://www.incredibleindia.gov.in/en">info@incredibleindia.com</a><br>
+        ©2025 Incredible India Project
+        </div>
 
     </body>
 </html>
