--- a/landmarks.html
+++ b/landmarks.html
@@ -3,14 +3,20 @@
         <title>
             Landmarks
         </title>
+
+        <link rel="stylesheet" href="./landmark.css">
     </head>
     <body>
 
-        <a href="home.html"><li>Home</li></a>
-        <a href="culture.html" target="_self"><li>Culture</li></a>
-        <a href="landmarks.html"><li>Landmarks</li></a>
-        <a href="cuisine.html"><li>Cuisine</li></a>
-        <a href="contect.html"><li>Contect Us</li></a>
+        <div class="link">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="culture.html" target="_self">Culture</a></li>
+                <li><a href="landmarks.html">Landmarks</a></li>
+                <li><a href="cuisine.html">Cuisine</a></li>
+                <li><a href="contect.html">Contect Us</a></li>
+            </ul>
+        </div>
 
         <h2>Iconic Monuments</h2>
 
@@ -39,7 +45,7 @@
         India is a union of states, each with its unique cultural and geographical identity. 
         Here's a detailed table listing some Indian states, their capitals, and key data:
 
-
+        <h2 align="center">List of Indian States</h2>
         <table border="1px" cellspacing="0">
 
             <tr align="center">
@@ -94,7 +100,12 @@
         <figure><img src="./../wd project photo/dal_lake.jpg"></figure>
         <blockquote>The floating post office in Dal Lake, Srinagar</blockquote>
 
-        <a href="home.html">&#8592 Back to Home</a>
+        <a href="home.html">&#8592 Back to Home</a><br><br>
+
+        <div class="footer">
+            Contect us at <a href="https://www.incredibleindia.gov.in/en">info@incredibleindia.com</a><br>
+        ©2025 Incredible India Project
+        </div>
 
     </body>
 </html>
