--- a/home.html
+++ b/home.html
@@ -3,19 +3,28 @@
         <title>
             Home
         </title>
-        <h1>
-            Welcome to Incredible India
-        </h1>
+        
+        <link rel="stylesheet" href="./home.css">
     </head>
     <body>
 
-        <b>Discover the diversity,beauty,and rich heritage of India!</b><br>
+        <div class="header">
+            <h1>
+                Welcome to Incredible India
+            </h1>
+        </div>
+
+        <h3>Discover the diversity,beauty,and rich heritage of India!</h3><br>
         
-        <a href="home.html"><li>Home</li></a>
-        <a href="culture.html" target="_self"><li>Culture</li></a>
-        <a href="landmarks.html"><li>Landmarks</li></a>
-        <a href="cuisine.html"><li>Cuisine</li></a>
-        <a href="contect.html"><li>Contect Us</li></a>
+        <div class="link">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="culture.html" target="_self">Culture</a></li>
+                <li><a href="landmarks.html">Landmarks</a></li>
+                <li><a href="cuisine.html">Cuisine</a></li>
+                <li><a href="contect.html">Contect Us</a></li>
+            </ul>
+        </div>
 
         <h2>About India</h2>
 
@@ -74,11 +83,15 @@
         <blockquote><li><b>Street Food:</b> Pani puri, chaat, and vada pav.</li></blockquote>
 
         <figure><img src="./../wd project photo/biryani.jpg"></figure>
-
         <blockquote>Delicious Hyderabadi Biryani</blockquote>
 
         <figure><img src="./../wd project photo/street_food.jpg"></figure>
-
         <blockquote>Colorful and flavorful Indian street food</blockquote>
+
+        <div class="footer">
+            Contect us at <a href="https://www.incredibleindia.gov.in/en">info@incredibleindia.com</a><br>
+        ©2025 Incredible India Project
+        </div>
+
     </body>
 </html>
