--- a/contect.html
+++ b/contect.html
@@ -138,7 +138,7 @@
             <tr>
                 <td>Marks</td>
                 <td>:</td>
-                <td><input type="text" size="6"></td>
+                <td><input type="number" size="6"></td>
             </tr> 
 
             <tr>
