--- a/cuisine.html
+++ b/cuisine.html
@@ -10,7 +10,7 @@
 
         <div class="link">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html" id="first">Home</a></li>
                 <li><a href="culture.html" target="_self">Culture</a></li>
                 <li><a href="landmarks.html">Landmarks</a></li>
                 <li><a href="cuisine.html">Cuisine</a></li>
@@ -18,15 +18,17 @@
             </ul>
         </div>
 
-
-        <h1>Popular Indian Dishes</h1>
-
-        Explore the flavors of India throgth is diverse and rich culinary traditions!<br><br>
+        <div class="tital">
+            <h1>~ Popular Indian Dishes</h1>
+        </div>
+        <br>
+        <b>* Explore the flavors of India throgth is diverse and rich culinary traditions!</b><br><br>
 
         <audio src="./../wd project photo/titanium.mp3" controls></audio>
 
-
-        <h2>North Indian Cuisine</h2>
+        <div class="tital">
+            <h2>~ North Indian Cuisine</h2>
+        </div>
 
         North India is known for its rice, aromatic, and flavorful dishes ofeten cooked with ghee and spices:
 
@@ -35,11 +37,14 @@
         <blockquote><li><b>Paneer Tikka:</b> Marinated paneer cubes grilled to perfection</li></blockquote>
 
         <figure><img src="./../wd project photo/biryani.jpg"></figure>
-        <blockquote>Aromatic and flavorful Biryani</blockquote>
 
+        <div class="under">
+            <blockquote>Aromatic and flavorful Biryani</blockquote>
+        </div>
 
-        <h2>south Indian Cuisine</h2>
-
+        <div class="tital">        
+            <h2>~ south Indian Cuisine</h2>
+        </div>
         South India offers a wide array of dishes with a perfect blend of a spices and tangy flavors:
 
         <blockquote><li><b>Msala Dosa:</b> A crispy rice stuffed with spicy potato filling.</li></blockquote>
@@ -47,10 +52,14 @@
         <blockquote><li><b>Chettinad Chicken:</b> A fiery, flavorful chicken dish from Tamil Nadu.</li> </blockquote>
 
         <figure><img src="./../wd project photo/dosa.jpg"></figure>
-        <blockquote>South Indian favorite: Masala Dosa</blockquote>
 
+        <div class="under">
+            <blockquote>South Indian favorite: Masala Dosa</blockquote>
+        </div>
 
-        <h2>Sweet Delights</h2>
+        <div class="tital">
+            <h2>~ Sweet Delights</h2>
+        </div>
 
         No Indian meal is complete without indulging in some mouth-watering dessers:
 
@@ -59,8 +68,10 @@
         <blockquote><li><b>Payasam:</b> A South Indian dessert made of milk, rice, and jaggery.</li></blockquote>
 
         <figure><img src="./../wd project photo/gulab_jamun.jpg"></figure>
-        <blockquote>Irresistible Gulab Jamun</blockquote>
 
+        <div class="under">
+            <blockquote>Irresistible Gulab Jamun</blockquote>
+        </div>
         <a href="home.html">&#8592 Back to Home</a><br><br>
 
         <div class="footer">
