--- a/culture.html
+++ b/culture.html
@@ -10,7 +10,7 @@
 
         <div class="link">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html" id="first">Home</a></li>
                 <li><a href="culture.html" target="_self">Culture</a></li>
                 <li><a href="landmarks.html">Landmarks</a></li>
                 <li><a href="cuisine.html">Cuisine</a></li>
@@ -18,12 +18,14 @@
             </ul>
         </div>
 
-        
-        <h1>Indian Culchure</h1>
-
-        Discover the rich and diverse culture of India, a land of unity in diversity.
-
-        <h2>Festivals</h2>
+        <div class="tital">
+            <h1>~ Indian Culchure</h1>
+        </div>
+        <br>
+        <b>* Discover the rich and diverse culture of India, a land of unity in diversity.</b>
+        <div class="tital">        
+            <h2>~ Festivals</h2>
+        </div>
 
         India celebrates a variety of festivals that reflect its rich cultural heritage and religious diversity:
 
@@ -33,15 +35,21 @@
         <blockquote><li><b>Christmas:</b> Festival of joy, celebrating the birth of Jeuss Christ.</li></blockquote>
 
         <figure><img src="./../wd project photo/diwali.jpg"></figure>
-        Diwali - The Festival of Lights
 
-        <h2>Languages</h2>
+        <div class="under">
+            <blockquote>Diwali - The Festival of Lights</blockquote>
+        </div>
+
+        <div class="tital">
+            <h2>~ Languages</h2>
+        </div>
 
         India is a linguistic treasure trove with 22 officially recognized languages and thousands of regional
         dialects:
 
-        <h3>Popular Languages in India</h3>
-
+        <div class="tital">
+            <h3>~ Popular Languages in India</h3>
+        </div>
 
         <table border="1px" cellspacing="0">
 
@@ -72,10 +80,14 @@
 
         </table>
 
+        <br>
+        <div class="rendom">
+            <details><summary>Fun Fact</summary></details>
+        </div>
 
-        <details><summary>Fun Fact</summary></details>
-
-        <h2>Traditional Attire</h2>
+        <div class="tital">
+            <h2>~ Traditional Attire</h2>
+        </div>
 
         Indian traditional clothing varies by region, showcasing its cultural diversity:
 
@@ -85,7 +97,10 @@
         <blockquote><li><b>Dhoti:</b> Traditional men's wear in southern and eastern India.</li></blockquote>
 
         <figure><img src="./../wd project photo/saree.jpg"></figure>
-        <blockquote>Traditional Saree - Grace and Elegance</blockquote>
+
+        <div class="under">
+            <blockquote>Traditional Saree - Grace and Elegance</blockquote>
+        </div>
 
         <a href="home.html">&#8592 Back to Home</a><br><br>
 
