--- a/landmarks.html
+++ b/landmarks.html
@@ -10,7 +10,7 @@
 
         <div class="link">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html" id="first">Home</a></li>
                 <li><a href="culture.html" target="_self">Culture</a></li>
                 <li><a href="landmarks.html">Landmarks</a></li>
                 <li><a href="cuisine.html">Cuisine</a></li>
@@ -18,7 +18,9 @@
             </ul>
         </div>
 
-        <h2>Iconic Monuments</h2>
+        <div class="tital">
+            <h2>~ Iconic Monuments</h2>
+        </div>
 
         India is home to some of the most awe-inspiring landmarks in the World. 
         These monuments reflect its rich cultural heritage and historical significance:
@@ -38,14 +40,22 @@
 
 
         <figure><img src="./../wd project photo/redfort.jpg"></figure>
-        <blockquote>The majestic red Fort in Delhi</blockquote>
+        
+        <div class="under">
+            <blockquote>The majestic red Fort in Delhi</blockquote>
+        </div>
 
-        <h2>Indian States and Capitals</h2>
+        <div class="tital">       
+             <h2>~ Indian States and Capitals</h2>
+        </div>
 
         India is a union of states, each with its unique cultural and geographical identity. 
         Here's a detailed table listing some Indian states, their capitals, and key data:
 
-        <h2 align="center">List of Indian States</h2>
+        <div class="tital">
+            <h2 align="center">List of Indian States</h2>
+        </div>
+        
         <table border="1px" cellspacing="0">
 
             <tr align="center">
@@ -91,14 +101,18 @@
 
         </table>
 
-
-        <h2>Fun Fact</h2>
+        <div class="tital">
+            <h2>~ Fun Fact</h2>
+        </div>
 
         Did you know? India has the largest postal network in the world, with over 1,50,500 post offices, 
         including one located on a floating structure in Dal Lake, Srinagar.
 
         <figure><img src="./../wd project photo/dal_lake.jpg"></figure>
-        <blockquote>The floating post office in Dal Lake, Srinagar</blockquote>
+
+        <div class="under">
+            <blockquote>The floating post office in Dal Lake, Srinagar</blockquote>
+        </div>
 
         <a href="home.html">&#8592 Back to Home</a><br><br>
 
