--- a/contect.html
+++ b/contect.html
@@ -23,18 +23,18 @@
         </div>
         <br>
 
-        <b>* Please fill out the form below for any inquiries prregister as a student.</b>
+        <div class="leater">
+            <h3>* Please fill out the form below for any inquiries prregister as a student.</h3>
+        </div>
         <div class="tital">        
             <h2>~ Student Registration Form</h2>
         </div>
 
         <table>
-
-
             <tr>
-                    <td><label for="firstname">First Name</label></td>
-                    <td>:</td>
-                    <td><input id="firstname" type="text" placeholder="Enter your first name" size="18"></td>
+                <td><label for="firstname">First Name</label></td>
+                <td>:</td>
+                <td><input id="firstname" type="text" placeholder="Enter your first name" size="18"></td>
             </tr>
 
             <tr>
