--- a/cuisine.html
+++ b/cuisine.html
@@ -22,7 +22,9 @@
             <h1>~ Popular Indian Dishes</h1>
         </div>
         <br>
-        <b>* Explore the flavors of India throgth is diverse and rich culinary traditions!</b><br><br>
+        <div class="leater">
+            <h3>* Explore the flavors of India throgth is diverse and rich culinary traditions!</h3><br><br>
+        </div>
 
         <audio src="./../wd project photo/titanium.mp3" controls></audio>
 
@@ -36,7 +38,7 @@
         <blockquote><li><b>Butter Chicken:</b> A creamy, tomato-based curry that's a favorite worldwide.</li></blockquote>
         <blockquote><li><b>Paneer Tikka:</b> Marinated paneer cubes grilled to perfection</li></blockquote>
 
-        <figure><img src="./../wd project photo/biryani.jpg"></figure>
+        <figure><img style="box-shadow: 0px 0px 12px grey;" src="./../wd project photo/biryani.jpg"></figure>
 
         <div class="under">
             <blockquote>Aromatic and flavorful Biryani</blockquote>
@@ -51,7 +53,7 @@
         <blockquote><li><b>Idli and Sambar:</b> Soft rice cakes served with a tangy lentil-based vegetable stew.</li></blockquote>
         <blockquote><li><b>Chettinad Chicken:</b> A fiery, flavorful chicken dish from Tamil Nadu.</li> </blockquote>
 
-        <figure><img src="./../wd project photo/dosa.jpg"></figure>
+        <figure><img style="box-shadow: 0px 0px 12px grey;" src="./../wd project photo/dosa.jpg"></figure>
 
         <div class="under">
             <blockquote>South Indian favorite: Masala Dosa</blockquote>
@@ -67,7 +69,7 @@
         <blockquote><li><b>Rasgulla:</b> Soft and spongy cheese balls in light sugar syrup.</li></blockquote>
         <blockquote><li><b>Payasam:</b> A South Indian dessert made of milk, rice, and jaggery.</li></blockquote>
 
-        <figure><img src="./../wd project photo/gulab_jamun.jpg"></figure>
+        <figure><img style="box-shadow: 0px 0px 12px grey;" src="./../wd project photo/gulab_jamun.jpg"></figure>
 
         <div class="under">
             <blockquote>Irresistible Gulab Jamun</blockquote>
