--- a/culture.html
+++ b/culture.html
@@ -22,7 +22,9 @@
             <h1>~ Indian Culchure</h1>
         </div>
         <br>
-        <b>* Discover the rich and diverse culture of India, a land of unity in diversity.</b>
+        <div class="leater">
+            <h3>* Discover the rich and diverse culture of India, a land of unity in diversity.</h3>
+        </div>
         <div class="tital">        
             <h2>~ Festivals</h2>
         </div>
@@ -34,7 +36,7 @@
         <blockquote><li><b>Eid:</b> Festival of Harmony, marked by prayers, feasta, and charity.</li></blockquote>
         <blockquote><li><b>Christmas:</b> Festival of joy, celebrating the birth of Jeuss Christ.</li></blockquote>
 
-        <figure><img src="./../wd project photo/diwali.jpg"></figure>
+        <figure><img style="box-shadow: 0px 0px 12px grey;" src="./../wd project photo/diwali.jpg"></figure>
 
         <div class="under">
             <blockquote>Diwali - The Festival of Lights</blockquote>
@@ -96,7 +98,7 @@
         <blockquote><li><b>Lehenga:</b> A festive outfit for women, especially in weddings.</li></blockquote>
         <blockquote><li><b>Dhoti:</b> Traditional men's wear in southern and eastern India.</li></blockquote>
 
-        <figure><img src="./../wd project photo/saree.jpg"></figure>
+        <figure><img style="box-shadow: 0px 0px 12px grey;" src="./../wd project photo/saree.jpg"></figure>
 
         <div class="under">
             <blockquote>Traditional Saree - Grace and Elegance</blockquote>
