--- a/cuisine.html
+++ b/cuisine.html
@@ -1,21 +1,20 @@
 <html>
     <head>
-        <title>
-            Cuisine
-        </title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Cuisine</title>
 
         <link rel="stylesheet" href="./cuisine.css">
     </head>
     <body>
 
         <div class="link">
-            <ul>
-                <li><a href="home.html" id="first">Home</a></li>
-                <li><a href="culture.html" target="_self">Culture</a></li>
-                <li><a href="landmarks.html">Landmarks</a></li>
-                <li><a href="cuisine.html">Cuisine</a></li>
-                <li><a href="contect.html">Contect Us</a></li>
-            </ul>
+            <li><a href="home.html" id="first">Home</a></li>
+            <li><a href="culture.html" target="_self">Culture</a></li>
+            <li><a href="landmarks.html">Landmarks</a></li>
+            <li><a href="cuisine.html">Cuisine</a></li>
+            <li><a href="contect.html">Contect Us</a></li>
         </div>
 
         <div class="tital">
@@ -32,8 +31,9 @@
             <h2>~ North Indian Cuisine</h2>
         </div>
 
-        North India is known for its rice, aromatic, and flavorful dishes ofeten cooked with ghee and spices:
-
+        <p>
+            North India is known for its rice, aromatic, and flavorful dishes ofeten cooked with ghee and spices:
+        </p>
         <blockquote><li><b>Biryani:</b> A fragrant rice dish made with aromatic spices amd meat or vegetable.</li></blockquote>
         <blockquote><li><b>Butter Chicken:</b> A creamy, tomato-based curry that's a favorite worldwide.</li></blockquote>
         <blockquote><li><b>Paneer Tikka:</b> Marinated paneer cubes grilled to perfection</li></blockquote>
@@ -47,8 +47,11 @@
         <div class="tital">        
             <h2>~ south Indian Cuisine</h2>
         </div>
-        South India offers a wide array of dishes with a perfect blend of a spices and tangy flavors:
 
+        <p>
+            South India offers a wide array of dishes with a perfect blend of a spices and tangy flavors:
+        </p>
+        
         <blockquote><li><b>Msala Dosa:</b> A crispy rice stuffed with spicy potato filling.</li></blockquote>
         <blockquote><li><b>Idli and Sambar:</b> Soft rice cakes served with a tangy lentil-based vegetable stew.</li></blockquote>
         <blockquote><li><b>Chettinad Chicken:</b> A fiery, flavorful chicken dish from Tamil Nadu.</li> </blockquote>
