--- a/culture.html
+++ b/culture.html
@@ -1,21 +1,20 @@
 <html>
     <head>
-        <title>
-            Culture
-        </title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <title>Culture</title>
 
         <link rel="stylesheet" href="./culture.css">
     </head>
     <body>
 
         <div class="link">
-            <ul>
-                <li><a href="home.html" id="first">Home</a></li>
-                <li><a href="culture.html" target="_self">Culture</a></li>
-                <li><a href="landmarks.html">Landmarks</a></li>
-                <li><a href="cuisine.html">Cuisine</a></li>
-                <li><a href="contect.html">Contect Us</a></li>
-            </ul>
+            <li><a href="home.html" id="first">Home</a></li>
+            <li><a href="culture.html" target="_self">Culture</a></li>
+            <li><a href="landmarks.html">Landmarks</a></li>
+            <li><a href="cuisine.html">Cuisine</a></li>
+            <li><a href="contect.html">Contect Us</a></li>
         </div>
 
         <div class="tital">
@@ -29,8 +28,9 @@
             <h2>~ Festivals</h2>
         </div>
 
-        India celebrates a variety of festivals that reflect its rich cultural heritage and religious diversity:
-
+        <p>
+            India celebrates a variety of festivals that reflect its rich cultural heritage and religious diversity:
+        </p>
         <blockquote><li><b>Diwali:</b> Festival of Light, synbolizing the victory of light over darkness.</li></blockquote>
         <blockquote><li><b>Holi:</b> Festival of Colors, celebrating love and the arrival of spring.</li></blockquote>
         <blockquote><li><b>Eid:</b> Festival of Harmony, marked by prayers, feasta, and charity.</li></blockquote>
@@ -46,8 +46,10 @@
             <h2>~ Languages</h2>
         </div>
 
-        India is a linguistic treasure trove with 22 officially recognized languages and thousands of regional
-        dialects:
+        <p>
+            India is a linguistic treasure trove with 22 officially recognized languages and thousands of regional
+            dialects:
+        </p>
 
         <div class="tital">
             <h3>~ Popular Languages in India</h3>
@@ -91,8 +93,9 @@
             <h2>~ Traditional Attire</h2>
         </div>
 
-        Indian traditional clothing varies by region, showcasing its cultural diversity:
-
+        <p>
+            Indian traditional clothing varies by region, showcasing its cultural diversity:
+        </p>
         <blockquote><li><b>Saree:</b> Elegant drape worn by women across India.</li></blockquote>
         <blockquote><li><b>Kurta-Pajama:</b> Comfortable attire for men, popular in the north.</li></blockquote>
         <blockquote><li><b>Lehenga:</b> A festive outfit for women, especially in weddings.</li></blockquote>
