--- a/home.html
+++ b/home.html
@@ -10,11 +10,13 @@
     </head>
     <body>
 
-        <div class="conteinar">
+        
             <div class="header">
-                <h1>
-                    Welcome to Incredible India
+                <h1 style="font-family: 'Josefin Slab',snan-serif;">
+                    Welcome to <mark>Incredible India</mark>
                 </h1>
+                <h3 style="font-family: sans-serif;font-style:inherit;">* Discover the diversity,beauty,and rich heritage of India!</h3>
+                <hr>
             </div>
 
             <div class="link">
@@ -26,11 +28,7 @@
                     <li><a href="contect.html">Contect Us</a></li>
                 <!-- </ul> -->
             </div>
-
-            <div class="leater">
-                <h3>* Discover the diversity,beauty,and rich heritage of India!</h3>
-            </div>
-
+        <div class="conteinar">
             <div class="tital">
                 <h2>~ About India</h2>
             </div>
