--- a/homeByBoostrapt.html
+++ b/homeByBoostrapt.html
@@ -17,11 +17,11 @@
     <div class="h3 text-center bg-success">Discover The Diversity,beauty and rich heritage of india!</div>
     <div class="link fs-5">
       <ul>
-         <li><a href="./home.html" ><div class="h4 text-dark ">Home</div></a></li>
-         <li><a href="./cultur.html"><div class="h4 text-dark">Culture</div></a></li>
-         <li><a href="./landmark.html"><div class="h4 text-dark">landmarks</div></a></li> 
-         <li><a href="cuisine.htm"><div class="h4 text-dark">Cuisine</div></a></li> 
-         <li> <a href="./contectus.html"><div class="h4 text-dark">Contact Us</div></a></li>
+         <li><a href="./homeByBoostrapt.html" ><div class="h4 text-dark ">Home</div></a></li>
+         <li><a href="./culturByBoostrapt.html"><div class="h4 text-dark">Culture</div></a></li>
+         <li><a href="./landmarkByBoostrapt.html"><div class="h4 text-dark">landmarks</div></a></li> 
+         <li><a href="cuisineByBoostrapt.htm"><div class="h4 text-dark">Cuisine</div></a></li> 
+         <li> <a href="./contectusByBoostrapt.html"><div class="h4 text-dark">Contact Us</div></a></li>
       </ul>
     </div>
     <ul>
