--- a/cuisineByBoostrapt.htm
+++ b/cuisineByBoostrapt.htm
@@ -1,19 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div class="link fs-5">
-        <ul>
-           <li><a href="./home.html" ><div class="h4 text-dark ">Home</div></a></li>
-           <li><a href="./cultur.html"><div class="h4 text-dark">Culture</div></a></li>
-           <li><a href="./landmark.html"><div class="h4 text-dark">landmarks</div></a></li> 
-           <li><a href="cuisine.htm"><div class="h4 text-dark">Cuisine</div></a></li> 
-           <li> <a href="./contectus.html"><div class="h4 text-dark">Contact Us</div></a></li>
-        </ul>
-      </div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="cointeiner" style="background-color: #E6E6FA;">
+        <div class="link fs-5">
+            <ul>
+               <li><a href="./homeByBoostrapt.html" ><div class="h4 text-dark ">Home</div></a></li>
+               <li><a href="./culturByBoostrapt.html"><div class="h4 text-dark">Culture</div></a></li>
+               <li><a href="./landmarkByBoostrapt.html"><div class="h4 text-dark">landmarks</div></a></li> 
+               <li><a href="cuisineByBoostrapt.htm"><div class="h4 text-dark">Cuisine</div></a></li> 
+               <li> <a href="./contectusByBoostrapt.html"><div class="h4 text-dark">Contact Us</div></a></li>
+            </ul>
+          </div>
+        <main class="">
+            <p class="h5 text-primary mt-3 ms-3">Popular Indian dishes</p>
+            <p >Explore the flavors of India through its diverse and rich culinary traditions!</p>
+            <audio src="./audio.mp3"></audio>
+            <p class="h5 text-primary mt-3 ms-3">North Indian Cuisine</p>
+            <p>North india is known for its rich,aromatic,and flavorful dishes often cooked with ghee and spices:</p>
+            <ul >
+                <li><strong>Biryani:</strong>  A fragment rise dish made with aromatic spices and meat or vagetables.</li>
+                <li><strong>Butter Chicken: </strong>A creamy,tomato-based curry tht's favorite wordwide.</li>
+                <li><strong>Paneer tikka: </strong>Marinated Paneer cubes grilled to perfaction.</li>
+            </ul>
+            <img src="./../wd project photo/biryani.jpg" class="rounded m-3 border border-dark border-3" alt="...">
+            <p>aromatic and flavorful Biryani</p>
+            <p class="h5 text-primary mt-3 ms-3">south Indian Cuisine</p>
+            <p>South India offer a wide array of dishes with a perfect blend of spices and tangy flavors.</p>
+            <ul>
+                <li><strong>Masala Dosa: </strong> A crispy rise crepe stuffed with spice potato filling.</li>
+                <li><strong>Idli and Samber: </strong>A creamy,tomato-based curry tht's favorite wordwide.</li>
+                <li><strong>Chettinad Chicken: </strong>A fiery,flavorful chicken dish from Tamil Nadu.</li>
+            </ul>
+            <img src="./../wd project photo/dosa.jpg" class="rounded m-3 border border-dark border-3" alt="...">
+            <p>South indian favorite: Masala Dosa</p>
+    
+            <p class="h5 text-primary mt-3 ms-3">Sweet Dishes</p>
+            <p>No Indian meal is completed without including in some mouth-watering desserts:</p>
+            <ul >
+                <li><strong>Gulab jamun: </strong>  Fried milk solids soaked in sugar syrup.</li>
+                <li><strong>Rasgula: </strong>Soft and spongy cheese balls in light sugar syrup.</li>
+                <li><strong>Payasam: </strong>A South Indian desserst made of milk ,rise,and jaggery.</li>
+            </ul>
+            <img src="./../wd project photo/gulab_jamun.jpg" class="rounded m-3 border border-dark border-3" alt="...">
+            <p>Irresistible Gulab jamun</p>
+        </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </div>
+  </body>
 </html>
